# ChessEngine

./: .gitignore  CMakeLists.txt
Sources/: Main.cpp
Sources/Application/: Application.cpp  Application.h  Renderer.cpp  Renderer.h
Sources/Core/: ChessGame.cpp  ChessGame.h
Sources/Utils/: Vec2Int.cpp  Vec2Int.h
